# libMVCI

./: .gitignore  BUILD.md  CMakeLists.txt  CMakePresets.json  MVCI.sln  MVCI.vcxproj  Makefile  README.md  mvci_test.vcxproj
cmake/: MVCIConfig.cmake.in  libmvciConfig.cmake.in
docs/: PROTOCOL.md
include/mvci/: j2534.h  serial.h
src/: compat.h  des.c  io.c  io.h  mvci.def  passthru.c  serial.c
test/: mvci_test.c
